--- a/crates/graphs/Cargo.toml
+++ b/crates/graphs/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-csv = "1.3"
-thiserror = "2.0"
+csv = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
-tempfile = "3.8"
+tempfile = { workspace = true }
